package edu.fiuba.algo3.modelo.excepciones;

public class NoTieneRecursosParaIntercambioException extends PuertoException{
    public NoTieneRecursosParaIntercambioException(String s) {
        super();
    }
}
