package edu.fiuba.algo3.modelo.excepciones;

public class PuertoNoAdyacenteException extends PuertoException{
    public PuertoNoAdyacenteException(String s) {
        super();
    }
}
